[package]
name = "rust-audio-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio-stream = "0.1"
bytes = "1.4"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
thiserror = "1.0"
base64 = "0.21"
urlencoding = "2.1"
tracing-subscriber = "0.3"
tracing = "0.1.41"

